--- a/src/assets/css/utility.css
+++ b/src/assets/css/utility.css
@@ -4,8 +4,21 @@
 
   --header-bg-color: #ffffff;
   --home-bg-color: #ffffff;
+  --input-bg-color: #eee;
   --footer-bg-color: #fb1;
+  --button-bg-color: #fb1;
   --font-default-color: #333;
+}
+
+@keyframes animeLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: initial;
+  }
 }
 
 .app {
@@ -20,4 +33,8 @@
 .link {
   text-decoration: none;
   color: var(--color-default-font);
+}
+
+.animeLeft {
+  animation: animeLeft 0.3s forwards;
 }
