--- a/src/assets/css/utility.css
+++ b/src/assets/css/utility.css
@@ -38,3 +38,13 @@
 .animeLeft {
   animation: animeLeft 0.3s forwards;
 }
+
+.button {
+  padding: 1rem 3rem;
+  border: 0;
+  border-radius: 0.5rem;
+  background-color: var(--button-bg-color);
+  font-size: 1rem;
+  display: inline-block;
+  margin-bottom: 4rem;
+}
